# esp32_cloud

./: .gitignore  LICENSE  README.md  activate.sh
docs/: AWS_SETUP.md
projects/security_cam/docs/: ARCHITECTURE.md  HARDWARE.md  JOURNAL.md  LESSONS.md  README.md  SETUP.md
projects/security_cam/firmware/: .gitignore  CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3  sdkconfig.defaults.local.example
projects/security_cam/firmware/components/boot_console/: CMakeLists.txt  boot_console.c
projects/security_cam/firmware/components/button_adc/: CMakeLists.txt  button_adc.c
projects/security_cam/firmware/components/camera_hal/: CMakeLists.txt  idf_component.yml
projects/security_cam/firmware/components/camera_hal/esp32p4/: camera_hal_p4.c
projects/security_cam/firmware/components/camera_hal/esp32s3/: camera_hal_s3.c
projects/security_cam/firmware/components/camera_hal/include/: camera_hal.h
projects/security_cam/firmware/components/wifi_manager/: CMakeLists.txt
projects/security_cam/firmware/components/wifi_manager/esp32p4/: wifi_manager_p4.c
projects/security_cam/firmware/components/wifi_manager/esp32s3/: wifi_manager_s3.c
projects/security_cam/firmware/components/wifi_manager/include/: wifi_manager.h
projects/security_cam/firmware/main/: CMakeLists.txt  Kconfig.projbuild  main.c
projects/security_cam/terraform/: .gitignore  .terraform.lock.hcl  cognito.tf  gallery.tf  iam.tf  lambda.tf  main.tf  outputs.tf  s3.tf  ses.tf  terraform.tfvars.example  variables.tf
projects/security_cam/terraform/lambda_src/: list.py  manage.py  notify.py  presign.py
projects/security_cam/terraform/webapp_src/: index.html.tpl
(+22 files in other folders)
